--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://amitdevopsschool.github.io/bg-remove/",
   "name": "image-background-remover",
   "version": "0.1.0",
   "private": true,
